Fixed wrong width of input-file in file-upload-button

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -182,6 +182,11 @@ input[type='color'] {
   position: fixed;
 }
 
+.btn input[type='file'] {
+  width: 0px;
+  height: 0px;
+}
+
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 /* Extra small mobile devices */
